--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/metro-runtime": "~3.1.3",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
-    "expo": "~50.0.6",
+    "expo": "^52.0.39",
     "expo-av": "~13.10.5",
     "expo-file-system": "~16.0.6",
     "expo-status-bar": "~1.11.1",
@@ -20,7 +20,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-dialog": "^9.3.0",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-grid-component": "^2.0.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
@@ -28,7 +28,9 @@
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-template-literals": "^7.26.8"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
